--- a/Analise_Mineracao_Depth.ipynb
+++ b/Analise_Mineracao_Depth.ipynb
@@ -27097,8 +27097,9 @@
    "metadata": {},
    "source": [
     "Como nós filtramos processos que chegaram até o evento 513, iniciando pelo 333 e que passa OU NÃO pelo 1402, a base final pode haver conflito de dados. Esse conflito se da muito parecido como uma operação de conjuntos(figura abaixo). Para a base final, os processos que tem o marcador 513 CONTEM os processos que tem o marcador 1402 e 513. Em outras palavras, os processos 1402 estão contidos no 513. Dessa maneira, vou filtrar da base final (df_final) os processos que não CONTEM o 1402, que seria toda a área do conjunto hachurada(figura 2). PS:IGNORAR MEUS DOTES ARTÍSTICOS\n",
+    "![Sicherung vorbereiten](C:/Users/User/Downloads/asd222.png)\n",
     "\n",
-    "![title](C:/Users/User/Downloads/asd.png)\n",
+    "\n",
     "\n",
     "![title](C:/Users/User/Downloads/asd222.png)"
    ]
